--- a/app/views/home/FAQ.html.erb
+++ b/app/views/home/FAQ.html.erb
@@ -29,7 +29,7 @@
 <div class="expander">
 	  <a href="javascript:void(0)" id="js-expander-trigger-2" class="expander-trigger expander-hidden"><h3>Do you make home delivery's?</h3></a>
 	  <div id="js-expander-content-2" class="expander-content">
-	<p class="faqstyle"> Please contact us or place an order online <%= link_to 'order', home_order_path %> and we will get
+	<p class="faqstyle"> Please contact us at <b>516-285-5800</b> or place an order <!-- online <%= link_to 'order', home_order_path %> --> and we will get
 	back to you ASAP.  Typically we will deliver same day if the order is over a 100$ and within 10 miles of our location. Feel free to check our low prices <a <a target="_blank" href="https://www.beermenus.com/places/5375-valley-stream-discount-beverage-center">price list</a>
 	</p>
 	</div>
@@ -55,8 +55,8 @@
 	</div>
 </div>
 <div class="faq">
-	<div class="expander">
-	  <a href="javascript:void(0)" id="js-expander-trigger-5" class="expander-trigger expander-hidden"><h3>I didn't see a particular beer I was looking for, can you get it?</h3></a>
+<div class="expander">
+	  <a href="javascript:void(0)" id="js-expander-trigger-5" class="expander-trigger expander-hidden"><h3>Can I request a beer you don't stock?</h3></a>
 	  <div id="js-expander-content-5" class="expander-content">
 	<p class="faqstyle">Yes. Special orders are no problem at all. If you know of a hard-to-find beverage that even we don't have, we can probably get it for you. Please don't hesitate to contact us <%= link_to 'request' , new_request_path %>
 		</p>
@@ -65,9 +65,9 @@
 </div>
 <div class="faq">
 <div class="expander">
-	  <a href="javascript:void(0)" id="js-expander-trigger-6" class="expander-trigger expander-hidden"><h3>I own a business, how do I open a wholesale account?</h3></a>
+	  <a href="javascript:void(0)" id="js-expander-trigger-6" class="expander-trigger expander-hidden"><h3>How can I open a wholesale account?</h3></a>
 	  <div id="js-expander-content-6" class="expander-content">
-<p class="faqstyle"> Our class "C" license gives us the unique privledge to offer low pricing on both wholesale and retail customers.  Opening a wholesale account doesn't take long time we would require a few pieces of information as well as your tax id #.  If interested please fill out this small <%= link_to 'Create/Corporate Acct' , new_corporate_path %></p>
+<p class="faqstyle"> Our class "C" license gives us the unique privledge to offer low pricing on both wholesale and retail customers.  Opening a wholesale account doesn't take a long time we would require a few pieces of information as well as your tax id #.  If interested please fill out this brief <%= link_to 'Application' , new_corporate_path %></p>
 		</div>
 		</div>
 </div>
