--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,6 +1,16 @@
+<!-- <div class="hover-tile-outer" id="aboutanimate">
+  <div class="hover-tile-container">
+    <div class="hover-tile hover-tile-visible"></div>
+    <div class="hover-tile hover-tile-hidden">
+      <h4><u><%= link_to 'About', home_about_path %></u></h4>
+      <p>Valley Stream Beverage Center has been open since July 4, 2012!</p>
+    </div>
+  </div>
+</div> -->
+
 <h1>VS Beverage welcomes you!</h1>
 <div class="welcome">
-<div id="cheers">
+<div class="cheers">
 <%= image_tag "cheers.jpg", width:"100%", :id=>"cheers" %>
 </div>
 <div id="gmap">
@@ -14,7 +24,7 @@
 </iframe>
 </div>
 
-<div class="side-image">
+<!-- <div class="side-image">
   <div class="images-wrapper">></div>
     <div class="side-image-content">
     <%= image_tag "pumking.jpeg", width:"50%" %>
@@ -26,7 +36,7 @@
 		</p>
   </div>
 </div>
-</div>
+</div> -->
 
 
 
