--- a/app/views/home/products.html.erb
+++ b/app/views/home/products.html.erb
@@ -1,11 +1,29 @@
-<h1>Products</h1>
+
+<h2>
+		<a id="productlink" target="_blank" href="https://www.beermenus.com/places/5375-valley-stream-discount-beverage-center">Product List(Click to view)</a>
+	</h2>
  <div class="productbkg">
   
 </div>
  <div class="productbkg2">
 	
   	</div>
-<div class="beerlogos">
+
+  	<div class="side-image">
+  <div class="images-wrapper">></div>
+    <div class="side-image-content">
+    <%= image_tag "pumking.jpeg", width:"50%" %>
+      <h4>Topic Name</h4>
+      <h1>Seasonal beer of the month!!</h1>
+      <h4>Southern Tier Pumking</h4>
+      	<p>"...Big pumpkin, nutmeg, maybe cinnamon. Unbelievable. ABV is non existent. Mouthfeel is thick, but delicious...highly recommended."
+		Reviewed by: Beeradvocate.com <%= link_to 'review', href ="http://www.beeradvocate.com/beer/style/72/", target: '_blank' %>
+		</p>
+  </div>
+</div>
+</div>
+
+<!-- <div class="beerlogos">
 		<%= image_tag "amstel.jpeg", width: "50px", :id =>"amstel" %>
 		<%= image_tag "bluemoon.jpeg", width: "50px", :id =>"bluemoon" %>
 		<%= image_tag "brooklyn.jpeg", width: "50px", :id =>"brooklyn" %>
@@ -31,12 +49,10 @@
 		<%= image_tag "becks.jpeg", width: "50px", :id =>"becks" %>
 		<%= image_tag "grolsch.jpeg", width: "50px", :id =>"grolsch" %>
 	
-</div>
+</div> --><!-- 
 <div id="heinbtl"><%= image_tag("heinekenbtl.jpg", :id =>"hb") %></div>
-<div id="coronabtl"><%= image_tag("coronabtl.jpg", :id=>"cb") %></div>
-	<h3>
-		<a target="_blank" href="https://www.beermenus.com/places/5375-valley-stream-discount-beverage-center">Products/Pricing(click)</a>
-	</h3>
+<div id="coronabtl"><%= image_tag("coronabtl.jpg", :id=>"cb") %></div>  -->
+	
 	<br>
 	 <div class="productbkg3">
 	
