--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Products#index</h1>
+<div class="wholesale">
+<h1>Wholesale Pricing</h1>
 <%= flash[:notice] %>
 <table>
   <thead>
@@ -27,4 +28,4 @@
     <%= submit_tag "Import CSV" %>
   <% end %>
 </div>
-
+</div>
