--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -12,9 +12,8 @@
 		<%= label_tag :email, "Email"  %>
 		<%= email_field_tag :email %>
 </p>
-
-		<p class='contact'><%= submit_tag 'submit', class: 'request_submit', data: {disable_with: "Submitting..."} %>
+</div>
+		<p class='submit'><%= submit_tag 'submit', class: 'request_submit', data: {disable_with: "Submitting..."} %>
 		</p>
 
   <% end %>
-</div>
