FAQ route changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
         <li class="nav-link"><%= link_to 'About', home_about_path %></li>
         <li class="nav-link"><%= link_to 'Specials', home_specials_path %></li>
         <li class="nav-link"><%= link_to 'Contact', home_contact_path %></li>
-        <li class="nav-link"><%= link_to 'FAQ', home_faq_path %></li>
+        <li class="nav-link"><%= link_to 'FAQ', home_FAQ_path %></li>
         <li class="nav-link more"><a href="javascript:void(0)">More</a>
           <ul class="submenu">
            <li class="nav-link"><%= link_to 'Products', home_products_path %></li>
