fine tuning with members

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -16,7 +16,8 @@ section {
 //                 top: 315px; 
 //                 left: 15px;}
 .corpacct {padding: 1.5rem;}
-            
+.faqstyle {padding: 1.5rem;}
+.faqstyle li {text-indent: 15px;}            
 h1 {    font-size: 4rem; padding: 1.5rem;}h2 {    font-size: golden-ratio(4rem, -1);}
 h3 {    font-size: golden-ratio(4rem, -2); display: inline-block;}
 section  {
@@ -27,7 +28,7 @@ section  {
            //004c55
             
 }
-
+// .beerlogos {margin: 0px 0px 2800px 0px ;}
 #suggestion{ padding: 1.5rem;}
 #productlink {color: black; padding: 1.5rem;}
 .sp { padding: 1.5rem;}
