--- a/app/views/home/FAQ.html.erb
+++ b/app/views/home/FAQ.html.erb
@@ -4,13 +4,15 @@
 	<div class="expander">
 	  <a href="javascript:void(0)" id="js-expander-trigger" class="expander-trigger expander-hidden"><h3>What are your store's hours?</h3></a>
 	  <div id="js-expander-content" class="expander-content">
-	<p class="faqstyle"> We are open 7 days a week!
+	  <div class="faqstyle">
+	<p> We are open 7 days a week!
      	<ol>
-     		<li> Monday thru Friday 10am - 9pm</li>
-     		<li> Saturday  10am - 9pm</li>
-     		<li> Sunday  11am - 6pm </li>
+	     		<li> Monday thru Friday 10am - 9pm</li>
+	     		<li> Saturday  10am - 9pm</li>
+	     		<li> Sunday  11am - 6pm </li>
      	</ol>
      </p>
+     </div>
      </div>
      </div>
 </div>
