--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -7,7 +7,35 @@
     </div>
   </div>
 </div> -->
-
+<!-- <header>
+<div class="beerlogos">
+    <%= image_tag "amstel2.png", width: "50px", :id =>"amstel" %>
+    <%= image_tag "bluemoon.png", width: "50px", :id =>"bluemoon" %>
+    <%= image_tag "brooklyn.png", width: "50px", :id =>"brooklyn" %>
+    <%= image_tag "budlt.jpeg", width: "50px", :id =>"budlt" %>
+    <%= image_tag "bud.jpeg", width: "50px", :id =>"bud" %>
+    <%= image_tag "coorslt.png", width: "50px", :id =>"coorslt" %>
+    <%= image_tag "foster.png", width: "50px", :id =>"foster" %>
+    <%= image_tag "weihenstephan.jpeg", width: "50px", :id =>"weihenstephan" %>
+    <%= image_tag "samadams.png", width: "50px", :id =>"samadams" %>
+    <%= image_tag "miller.png", width: "50px", :id =>"miller" %>
+    <%= image_tag "stella.png", width: "50px", :id =>"stella" %>
+    <%= image_tag "corona.png", width: "50px", :id =>"corona" %>
+    <%= image_tag "guinness.png", width: "50px", :id =>"guinness" %>
+    <%= image_tag "newcastle.jpeg", width: "50px", :id =>"newcastle" %>
+    <%= image_tag "pbr.jpeg", width: "50px", :id =>"pbr" %>
+    <%= image_tag "redstripe.png", width: "50px", :id =>"redstripe" %>
+    <%= image_tag "peroni.png", width: "50px", :id =>"peroni" %>
+    <%= image_tag "carib.jpeg", width: "50px", :id =>"carib" %>
+    <%= image_tag "banks.jpeg", width: "50px", :id =>"banks" %>
+    <%= image_tag "guinblonde.jpeg", width: "50px", :id =>"guinblonde" %>
+    <%= image_tag "rollingrock.jpeg", width: "50px", :id =>"rollingrock" %>
+    <%= image_tag "anchor.jpeg", width: "50px", :id =>"anchor" %>
+    <%= image_tag "becks.jpeg", width: "50px", :id =>"becks" %>
+    <%= image_tag "grolsch.jpeg", width: "50px", :id =>"grolsch" %>
+  
+</div>
+</header> -->
 <h1>VS Beverage welcomes you!</h1>
 <div class="welcome">
 <div class="cheers">
