--- a/app/views/home/products.html.erb
+++ b/app/views/home/products.html.erb
@@ -2,10 +2,12 @@
 <h2>
 		<a id="productlink" target="_blank" href="https://www.beermenus.com/places/5375-valley-stream-discount-beverage-center">Product List(Click to view)</a>
 	</h2>
+<div id="products">
  <div class="productbkg">
   
 </div>
  <div class="productbkg2">
+ </div>
 	
   	</div>
 
